Pull more CSS into stylesheet and fix whitespaces

--- a/styles/layout.less
+++ b/styles/layout.less
@@ -634,28 +634,32 @@ table.dirlist {
 
     #tbtext {
         .center-align;
+        border-collapse: collapse;
         border: 1px solid #000000;
         overflow: auto;
     }
     #tdtop {
+        .middle-align;
         border: 1px solid #000000;
         background-color: #CDC0B0;
         padding: 2px;
     }
     #tdtext {
+        .top-align;
         border: 1px solid #000000;
         background-color: #CDCDC1;
         padding: 2px;
     }
     #tdbottom {
+        .top-align;
         border: 1px solid #000000;
         background-color: #EEDFCC;
         padding: 2px;
     }
     #text_data {
-        padding: 2px;
         background-color: #FFF8DC;
         color: #000000;
+        padding: 2px;
     }
     .dropsmall {
         font-size: 75%;
